--- a/public/web/src/app/views/channel/header/header.html
+++ b/public/web/src/app/views/channel/header/header.html
@@ -1,7 +1,7 @@
 <div class="channel-header clearfix">
 	<div class="header-content">
 		<div class="header">
-			<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
+			<img class="imageLoad" data-original="<%= pc_pic %>" alt="">
 		</div>
 		<div class="nav flex-box">
 			<div class="flex-1">
