--- a/public/web/src/app/views/channel/nav/nav.html
+++ b/public/web/src/app/views/channel/nav/nav.html
@@ -1,63 +1,10 @@
-<div class="channel-nav">
-	<div class="channel-list">
-		<ul>
-			<li class="selected">
-				<div class="channel-icon">
-					<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
-				</div>
-				频道
-				<i class="triangle-icon"></i>
-			</li>
-			<li>
-				<div class="channel-icon">
-					<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
-				</div>
-				频道
-				<i class="triangle-icon"></i>
-			</li>
-			<li>
-				<div class="channel-icon">
-					<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
-				</div>
-				频道
-				<i class="triangle-icon"></i>
-			</li>
-			<li>
-				<div class="channel-icon">
-					<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
-				</div>
-				频道
-				<i class="triangle-icon"></i>
-			</li>
-			<li>
-				<div class="channel-icon">
-					<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
-				</div>
-				频道
-				<i class="triangle-icon"></i>
-			</li>
-			<li>
-				<div class="channel-icon">
-					<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
-				</div>
-				频道
-				<i class="triangle-icon"></i>
-			</li>
-			<li>
-				<div class="channel-icon">
-					<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
-				</div>
-				频道
-				<i class="triangle-icon"></i>
-			</li>
-			<li>
-				<div class="channel-icon">
-					<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
-				</div>
-				频道
-				<i class="triangle-icon"></i>
-			</li>
-
-		</ul>
-	</div>
-</div>
+<ul>
+	<li class="channel-nav" data-id="<%= id %>">
+		<div class="channel-icon">
+			<img class="imageLoad grayscaled_icon" data-original="<%= grayscaled_icon %>" alt="">
+			<img class="imageLoad icon" data-original="<%= icon %>" alt="">
+		</div>
+		<%= display_name %>
+		<i class="triangle-icon"></i>
+	</li>
+</ul>
