--- a/public/web/src/app/views/common/header/header.less
+++ b/public/web/src/app/views/common/header/header.less
@@ -1,6 +1,6 @@
 .common-header {
 	height: 59px;
-    border-bottom: 3px solid #f5f5f5;
+    border-bottom: 5px solid #fafafa;
     margin-bottom: 10px;
 	.header-section {
 	    width: 1080px;
