--- a/public/web/src/less/common.less
+++ b/public/web/src/less/common.less
@@ -349,6 +349,20 @@ input::-webkit-input-placeholder {
             .password {
                 border-bottom: 1px solid #eaeaea;
                 margin-top: 20px;
+                position: relative;
+                #gain-code {
+                    font-size: 14px;
+                    text-align: center;
+                    border-radius: 5px;
+                    top: 0px;
+                    right: 1px;
+                    background: #e8e8e8;
+                    color: #c5c5c5;
+                    width: 90px;
+                    height: 30px;
+                    line-height: 30px;
+                    position: absolute;
+                }
                 input {
                         font-size: 16px;
                 }
