--- a/public/web/src/app/views/channel/ask/ask.html
+++ b/public/web/src/app/views/channel/ask/ask.html
@@ -1,26 +1,24 @@
-<div class="channel-ask">
 	<div class="work-content">
 		<div class="work-card">
 			<div class="header">
 				<div class="avatar">
-					<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
+					<img class="imageLoad" data-original="<%= avatar %>" alt="">
 				</div>
 				<div class="user-name">
-					名字
+					<%= nickname %>
 				</div>
 				<div class="follow-btn">
 					关注
 				</div>
 			</div>
 			<div class="content">
-				作品回答内容
+				<%= desc %>
 			</div>
 			<div class="work-img">
-				<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
+				<img src="<%= image_url %>" alt="">
 			</div>
 			<div class="ask-btn">
 				<img src="/web/img/bangp_gray.png" alt="">
 			</div>
 		</div>
 	</div>
-</div>
