--- a/public/web/src/app/views/channel/ask/ask.less
+++ b/public/web/src/app/views/channel/ask/ask.less
@@ -1,12 +1,23 @@
 .channel-ask {
-    width: 880px;
-    margin: 0 auto 30px 50px;
+    width: 920px;
+    margin: 0 auto 30px 30px;
     float: left;
 	.work-content {
+		.work-card:hover {
+			width: 259px;
+		    -webkit-box-shadow: 0 0 10px rgba(0, 204, 204, .5) black, 0 0 10px 20px red;
+		    -moz-box-shadow: 0 0 10px 5px black, 0 0 10px 20px red;
+		    box-shadow: 0 2px 13px #f6e1b8;
+		    border: 0px;
+		};
+		.work-card:hover .follow-btn {
+			display: inline-block !important;
+		}
 		.work-card {
 		    width: 260px;
 		    float: left;
-		    border: 1px solid #d6d5da;
+		    border: 1px solid #f2f2f2;
+	        margin: 0 20px 20px;
 			.header {
 			    height: 60px;
 				line-height: 60px;
@@ -27,6 +38,7 @@
 				}
 				.follow-btn {
 				    float: right;
+				    display: none;
 				    margin: 16px 10px;
 				    font-size: 14px;
 				    width: 60px;
