--- a/public/web/src/app/views/channel/work/work.less
+++ b/public/web/src/app/views/channel/work/work.less
@@ -1,9 +1,14 @@
+.channel-work-width {
+	width: 1090px;
+    margin: 0 auto;
+}
 .channel-work {
-    width: 880px;
-    margin:  0 auto 30px 50px;
-    float: left;
+    width: 870px;
+    margin:  0 auto 30px 0;
+    float: right;
     .card-section {
-	    border: 1px solid;
+	    -moz-box-shadow: 0px 0px 20px 5px #f7f7f7; /* 老的 Firefox */
+		box-shadow: 0px 0px 20px 5px #f7f7f7;
 		height: 490px;
 	    overflow: hidden;
 		.work-list {
