--- a/public/web/src/app/views/common/header/header.html
+++ b/public/web/src/app/views/common/header/header.html
@@ -83,10 +83,10 @@
 							</div>
 							<div class="login-input">
 								<div class="phone-number">
-									<input type="text">
+									<input  type="text" >
 								</div>
 								<div class="password">
-									<input type="password">
+									<input  type="password">
 								</div>
 								<div class="forget-password">
 									忘记密码?
@@ -120,19 +120,20 @@
 							</div>
 							<div class="login-input">
 								<div class="phone-number">
-									<input type="text" placeholder="昵称">
+									<input id="register_nickname" type="text" placeholder="昵称">
 								</div>
 								<div class="password">
-									<input type="text" placeholder="手机号码">
+									<input id="register_phone" type="text" placeholder="手机号码">
 								</div>
 								<div class="password">
-									<input type="text" placeholder="验证码">
+									<input id="register_code" type="text" placeholder="验证码">
+									<input id="gain-code" type="button" value="获取验证码">
 								</div>
 								<div class="password">
-									<input type="text" placeholder="输入密码">
+									<input id="register_password" type="text" placeholder="输入密码">
 								</div>
 							</div>
-							<div class="login-button">
+							<div id="user-register-btn" class="login-button">
 								<img src="/web/img/signup.png" alt="">
 							</div>
 						</div>
