--- a/public/web/src/app/views/detail/work/work.html
+++ b/public/web/src/app/views/detail/work/work.html
@@ -8,7 +8,7 @@
 			<div class="work-card">
 				<div class="header">
 					<div class="avatar">
-						<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
+						<img class="imageLoad" data-original="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
 					</div>
 					<div class="user-message">
 						<div class="user-name">
@@ -26,7 +26,7 @@
 					作品回答内容
 				</div>
 				<div class="work-img">
-					<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
+					<img class="imageLoad" data-original="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
 				</div>
 				<div class="channel clearfix">
 					<i class="channel-icon"></i>
@@ -57,7 +57,7 @@
 				<div class="comment-content clearfix">
 					<div class="comment-list clearfix">
 						<div class="comemnt-avatar">
-							<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
+							<img class="imageLoad" data-original="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
 						</div>
 						<div class="commnet-meesage">
 							<div class="message clearfix">
@@ -73,7 +73,7 @@
 				<div class="comment-content clearfix">
 					<div class="comment-list clearfix">
 						<div class="comemnt-avatar">
-							<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
+							<img class="imageLoad" data-original="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
 						</div>
 						<div class="commnet-meesage">
 							<div class="message clearfix">
