--- a/public/web/src/app/views/user/header/header.html
+++ b/public/web/src/app/views/user/header/header.html
@@ -2,25 +2,25 @@
 	<div class="header clearfix">
 		<div class="user-message clearfix">
 			<div class="avatar">
-				<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
+				<img class="imageLoad" data-original="<%= avatar %>" alt="">
 			</div>
 			<div class="message-section">
-				<div class="name">名字<i class="sex-icon"></i></div>
+				<div class="name"><%= nickname  %><i class="sex-icon"></i></div>
 				<div class="desciption">这里是简介描述,守护组长的头发</div>
-				<div class="liked">收到 666 喜欢<i class="like-icon"></i></div>
+				<div class="liked">收到 <%= up_count %> 喜欢<i class="like-icon"></i></div>
 			</div>
 			<div class="follow-message">
-				<span class="fans">粉丝 <em class="fans-count">123</em></span>
-				<span class="follow">关注 <em class="follow-count">123</em></span>
+				<span class="fans">粉丝 <em class="fans-count"><%= fans_count %></em></span>
+				<span class="follow">关注 <em class="follow-count"><%= fellow_count %></em></span>
 			</div>
 		</div>
 		<div class="header-nav clearfix">
 			<ul>
-				<li>动态</li>
-				<li>求P</li>
-				<li>进行中</li>
-				<li>作品</li>
-				<li>喜欢</li>
+				<li class="nav">动态</li>
+				<li class="nav select">求P</li>
+				<li class="nav">进行中</li>
+				<li class="nav">作品</li>
+				<li class="nav">喜欢</li>
 			</ul>
 			<span class="setting">
 				<i class="setting-icon"></i>
