--- a/public/web/src/app/views/user/work/work.html
+++ b/public/web/src/app/views/user/work/work.html
@@ -9,7 +9,7 @@
 					作品回答内容
 				</div>
 				<div class="work-img">
-					<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160519-165412573d7f3443ec6.jpg" alt="">
+					<img class="imageLoad" data-original="<%= 'avatar' %>" alt="">
 				</div>
 				<div class="btn-gather clearfix">
 					<div class="comment-show">
