--- a/public/web/src/app/views/user/header/header.less
+++ b/public/web/src/app/views/user/header/header.less
@@ -78,6 +78,10 @@
 			    margin-top: 40px;
 			    margin: 40px 30px 0;
 	    	}
+	    	.select {
+    		    color: #f9d160;
+				border-bottom: 3px solid #f9d160;
+	    	}
 	    	.setting {
 	    		font-size: 18px;
 			    float: right;
