FE path problem

--- a/public/main/src/less/common.less
+++ b/public/main/src/less/common.less
@@ -1019,7 +1019,7 @@ img.emojione {
 }
 
 .reminder {
-    background: url(../img/frame.png);
+    background: url(../../img/frame.png);
     width: 170px;
     height: 41px;
     background-repeat: no-repeat;
